@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------
-** Ecasound - User-visible changes (NEWS)      (last edited: 111001) **
+** Ecasound - User-visible changes (NEWS)      (last edited: 131001) **
 -----------------------------------------------------------------------
 
 About the version numbers... "vX.Y[.Z][devT]" :
@@ -17,7 +17,7 @@ About the version numbers... "vX.Y[.Z][devT]" :
 
 Last officially released version is -*> v2.0.3 *-
 
-??102001 (v2.1dev2)
+13102001 (v2.1dev2)
 	- added: ecaplay - -k, -d and -h options, see 'man ecaplay'
 	- added: eiam - ai-get-length-samples, ao-get-length-samples,
 		 cs-get-length-samples, cs-set-length-samples [smassy]
@@ -28,17 +28,20 @@ Last officially released version is -*> v2.0.3 *-
 	           are overridden, buffermode definition (-B) is
 		   saved instead of individual parameters
 	- changed: yet more changes to the multitrack-mode
+	- changed: eiam - output of *-status commands
 	- fixed: -r option wasn't saved to chainsetups (used
 		 to be a session-level option)
 	- fixed: typeselect problems when used for outputs
 	- fixed: system lockups with -B:rtlowlatency and 
-		 rt-object-only chainsetup
+		 rt-object-only chainsetups
 	- fixed: misplaced tab prevented eci.py from working
 		 with python 2.1 (nested scopes)
 	- fixed: if a monitor track input ended before recording 
                  stopped in multitrack mode and -z:db was enabled, 
 		 it continued producing unwanted noise to the
 		 monitor output
+	- fixed: eiam - ladspa-register output had plugin names 
+		 and descriptions mixed
 09102001 (v2.1dev1)
 	- added: chainsetup parser prints a warning if an unknown
 	         buffering mode is given to -B:mode 
